# paraview_mcp

./: Dockerfile  MANIFEST.in  PYPI_INSTRUCTION.md  README.md  agent-card.md  environment.yml  paraview_mcp_server.py  pyproject.toml  requirements.txt  setup.py
eval/: anonymize_dataset.py  category_specific_eval.yaml  data_identification_test_cases.yaml  eval_claude.yaml  full_test_cases.yaml  mcp_eval_client.py  simple_action_eval.yaml  test_cases.yaml
src/: __init__.py  paraview_manager.py  paraview_mcp_server.py
tests/: __init__.py  test_paraview_manager_live.py
